<resources>
    <string name="app_name">Android Middle</string>

    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_black">sans-serif-black</string>

    <string name="nav_account">Личный кабинет</string>
    <string name="nav_catalog">Каталог товаров</string>
    <string name="nav_favorites">Избранное</string>
    <string name="nav_orders">Мои заказы</string>
    <string name="nav_notifications">Мои уведомления</string>
    <string name="header_user_name">Сергей Сусев</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="image_view" translatable="false">android.widget.RelativeLayout</string>
    <string name="account_remove">Удалить</string>
    <string name="account_edit">Редактировать</string>



</resources>
